--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                             <hr>
                             
                             <div class="site-links hide-site-links">
-                                <a href="#" target="_blank"><button>See Site</button></a>
-                                <a href="#" target="_blank"><button>See Code</button></a>
+                                <a href="https://orrinth.github.io/test/" target="_blank"><button>See Site</button></a>
+                                <a href="" target="_blank"><button>See Code</button></a>
                             </div>
                         </div>
                     </div>
