--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             </ul>
 
             <div class="very-bottom">
-                <p>Orrin H. &copy; August 23, 2020</p>
+                <p>Created by orrinth. &copy; Copyright 2020. All Rights Reserved.</p>
             </div>
         </footer>
     </body>
