--- a/index.html
+++ b/index.html
@@ -15,19 +15,39 @@
     </head>
     <body>
         <nav>
+            <div class="logo">
+                <div class="logo-side"><span>WEB</span></div>
+                <div class="logo-middle"><span>OH</span></div>
+                <div class="logo-side"><span>DEV</span></div>
+            </div>
             <ul>
-                <li><a href="#home" title="Home" target="_self">Home</a></li>
-                <li><a href="#about" title="About" target="_self">About</a></li>
-                <li><a href="#portfolio" title="Portfolio" target="_self">Portfolio</a></li>
+                <li><a href="#home" target="_self">Home</a></li>
+                <li><a href="#about" target="_self">About</a></li>
+                <li><a href="#portfolio" target="_self">Portfolio</a></li>
             </ul>
         </nav>
         <main>
             <section id="home">
                 <h1>Hi, I'm Orrin. I make websites and web projects.</h1>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
+                <div class="square"></div>
             </section>
 
             <section id="about">
-                <h2>About me</h2>
+                <h2>About</h2>
                 <p>
                     I'm a self-taught developer with considerable experience in HTML5, CSS3 and JavaScript.
                     I love to learn, and am currently exploring frameworks such as Bootstrap and ReactJS. 
@@ -44,7 +64,6 @@
                     <i class="fab fa-css3-alt"></i>
                     <i class="fab fa-js"></i>
                 </div>
-                
             </section>
 
             <section id="portfolio">
