--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <h2>About</h2>
                 <p>
                     I'm a self-taught developer with considerable experience in HTML5, CSS3 and JavaScript.
-                    I love to learn, and am currently exploring Bootstrap and JS APIs. 
+                    I love to learn, and am currently exploring Bootstrap and JavaScript APIs. 
                 </p>
                 <p>
                     I'm also a college student majoring in Web Development, but
