--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
                 <li><a href="#about" target="_self">About</a></li>
                 <li><a href="#portfolio" target="_self">Portfolio</a></li>
             </ul>
+            <div class="burger">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </nav>
         <main>
             <section id="home">
