--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
             </section>
 
             <section id="techno">
-                <h2 data-aos="fade-up">Technologies I know</h2>
+                <h2 data-aos="fade-up">I'm experienced in</h2>
                 <div data-aos="fade-up" class="tech-known">
                     <i class="fab fa-html5"></i>
                     <i class="fab fa-css3-alt"></i>
                     <i class="fab fa-js"></i>
                 </div>
 
-                <h2 data-aos="fade-up">Technologies I'm learning</h2>
+                <h2 data-aos="fade-up">I'm learning</h2>
                 <div data-aos="fade-up" class="tech-learning">
                     <i class="fab fa-bootstrap"></i>
                     <i class="fab fa-react"></i>
