--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div data-aos="fade-up" class="tech-learning">
                     <i class="fab fa-bootstrap"></i>
                     <i class="fab fa-react"></i>
-                    <i class="fab fa-git-alt"></i>
+                    <i class="fab fa-sass"></i>
                 </div>
             </section>
 
