--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </div>
 
                 <div class="home words">
-                    <h2 class="line1" data-aos="fade-right">Looking for a front end developer?</h2>
+                    <h2 class="line1" data-aos="fade-right">Looking for a web developer?</h2>
                     <h2 class="line1" data-aos="fade-right">Look no further.</h2>
                     <h3 class="line2" data-aos="fade-right">My name is Orrin and I've got the skills you need.</h3>
                     <div data-aos="fade-right"><a href="#portfolio" id="portfolio-button">My portfolio</a></div>
